--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project A",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js expenses.html incomes.html"
   },
   "repository": {
     "type": "git",
