--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "mongodb": "^5.1.0"
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
