--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project A",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js expenses.html incomes.html"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,5 @@
     "fs": "^0.0.1-security",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.21"
   }
 }
