--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "spending",
     "earning"
   ],
+  "homepage": "https://rubywu0604.github.io/MoneyList",
   "author": "Ruby Wu",
   "license": "ISC",
   "dependencies": {
@@ -25,5 +26,8 @@
     "fs": "^0.0.1-security",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3"
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
