--- a/fly.toml
+++ b/fly.toml
@@ -1,5 +1,9 @@
 # fly.toml file generated for moneylist on 2023-04-12T14:19:48+08:00
 
 app = "moneylist"
-kill_timeout = 0
+kill_signal = "SIGINT"
+kill_timeout = 5
 primary_region = "nrt"
+processes = []
+
+[env]
