--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "moneylist",
   "version": "1.0.0",
   "description": "Project A",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
@@ -16,7 +16,6 @@
     "spending",
     "earning"
   ],
-  "homepage": "https://rubywu0604.github.io/MoneyList",
   "author": "Ruby Wu",
   "license": "ISC",
   "dependencies": {
