--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "moneylist",
   "version": "1.0.0",
   "description": "Project A",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
