--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "fs": "^0.0.1-security",
     "mongodb": "^5.2.0",
     "mongodb-connection-string-url": "^2.6.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "gh-pages": "^5.0.0"
